--- a/app/templates/admin/correcting.hbs
+++ b/app/templates/admin/correcting.hbs
@@ -1,5 +1,8 @@
 <section id="admin-correcting" class="container content-section" style="text-align:justify">
   <h2>Opravování</h2>
+
+  {{year-sealed model=session.year_obj}}
+
   <div class="panel panel-default">
 
     <div class="panel-heading">Zvolit omezení</div>
