--- a/app/templates/admin/task-edit.hbs
+++ b/app/templates/admin/task-edit.hbs
@@ -29,6 +29,8 @@
 
       </div>
 
+      {{year-sealed model=model.wave.year}}
+
       {{#if canSave}}
         <div class="row" style="margin-left:0px; margin-top:20px">
           <button class="btn btn-primary inline" id="save" {{action "task-save"}}>Uložit</button>
