--- a/app/templates/admin/article-edit.hbs
+++ b/app/templates/admin/article-edit.hbs
@@ -35,14 +35,17 @@
         {{/if}}
       </div>
 
+      {{year-sealed model=model.year}}
 
-      <div class="row" style="margin-left:0px; margin-top:20px">
-        {{#if saving}}
-            <button class="btn btn-primary inline disbaled" id="save_disabled">Ukládám...</button>
-        {{else}}
-            <button class="btn btn-primary inline" id="save" {{action "article-save"}}>Uložit</button>
-        {{/if}}
-      </div>
+      {{#unless model.year.sealed}}
+          <div class="row" style="margin-left:0px; margin-top:20px">
+            {{#if saving}}
+                <button class="btn btn-primary inline disbaled" id="save_disabled">Ukládám...</button>
+            {{else}}
+                <button class="btn btn-primary inline" id="save" {{action "article-save"}}>Uložit</button>
+            {{/if}}
+          </div>
+      {{/unless}}
 
       {{#if error_status}}
         <div class="alert alert-danger" style="margin-top:20px">{{error_status}}</div>
