--- a/app/templates/admin/tasks.hbs
+++ b/app/templates/admin/tasks.hbs
@@ -1,5 +1,8 @@
 <section id="admin-tasks" class="container content-section" style="text-align:justify">
   <h2>Správa úloh</h2>
+
+  {{year-sealed model=session.year_obj}}
+
   {{#if merge_status}}
     <div class="alert alert-info" style="margin-top:20px">{{merge_status}}</div>
   {{/if}}
@@ -43,11 +46,13 @@
 	      {{/unless}}
 	    {{/if}}
 
-	    {{#if task.wave.busy}}
-	     <button class="btn btn-primary disabled inline">Diff</button>
-	    {{else}}
-	     <button class="btn btn-primary inline" {{action "wave-diff" task.wave}}>Diff</button>
-	    {{/if}}
+        {{#if session.year_editable}}
+    	    {{#if task.wave.busy}}
+    	     <button class="btn btn-primary disabled inline">Diff</button>
+    	    {{else}}
+    	     <button class="btn btn-primary inline" {{action "wave-diff" task.wave}}>Diff</button>
+    	    {{/if}}
+        {{/if}}
 
 	    {{input type="checkbox" checked=task.wave.show_details}} Zobrazit detaily
 
