--- a/app/templates/admin/years.hbs
+++ b/app/templates/admin/years.hbs
@@ -15,6 +15,7 @@
         <th>Ročník</th>
         <th>Max. bodů</th>
         <th>#úloh</th>
+        <th>Zapečetěn</th>
         <th>Akce</th>
       </tr>
     </thead>
@@ -26,6 +27,7 @@
             <td>{{year.year}}</td>
             <td>{{year.sum_points}}</td>
             <td>{{year.tasks_cnt}}</td>
+            <td>{{year.sealed}}</td>
 
             <td>
 
