--- a/app/templates/components/thread-view.hbs
+++ b/app/templates/components/thread-view.hbs
@@ -1,27 +1,33 @@
+{{#if thread.year.sealed}}
+    {{year-sealed model=thread.year}}
+{{/if}}
+
 <ul class="media-list" style="margin:20px">
-	{{#each thread.details.root_posts as |post|}}
-		{{thread-post model=post store=store}}
+  {{#each thread.details.root_posts as |post|}}
+    {{thread-post model=post store=store}}
   {{else}}
-  <p>Toto vlákno je zatím prázdné. Můžeš přidat první příspěvek!</p>
-	{{/each}}
+    <p>Toto vlákno je zatím prázdné. Můžeš přidat první příspěvek!</p>
+  {{/each}}
 </ul>
 
 <div class="row" style="margin-bottom: 20px;">
-	{{#if session.isAuthenticated}}
-		<button class="btn btn-primary" style="margin-left:10px" {{action "add_comment"}}>{{unless is_reacting "Přidat příspěvek" "Zrušit příspěvek"}}</button>
-		{{#if is_reacting}}
-          {{#if content_error}}
-            {{warning-general text=content_error}}
+    {{#if session.isAuthenticated}}
+        {{#unless thread.year.sealed}}
+            <button class="btn btn-primary" style="margin-left:10px" {{action "add_comment"}}>{{unless is_reacting "Přidat příspěvek" "Zrušit příspěvek"}}</button>
+            {{#if is_reacting}}
+              {{#if content_error}}
+                {{warning-general text=content_error}}
+              {{/if}}
+              <div class="panel panel-default" style="border:none; box-shadow: none;">
+                  <div class="controls form-inline" style="margin-top:20px">
+                      <label for="threadName">Příspěvek:</label>
+                      {{text-editor value=response_text}}
+                  </div>
+                        <button class="btn btn-sm btn-primary" style="margin-top:20px" {{action "send"}}>Odeslat</button>
+                </div>
           {{/if}}
-          <div class="panel panel-default" style="border:none; box-shadow: none;">
-              <div class="controls form-inline" style="margin-top:20px">
-                  <label for="threadName">Příspěvek:</label>
-                  {{text-editor value=response_text}}
-              </div>
-      				<button class="btn btn-sm btn-primary" style="margin-top:20px" {{action "send"}}>Odeslat</button>
-      		</div>
-      {{/if}}
-	{{else}}
+        {{/unless}}
+    {{else}}
         {{warning-login text="Pro přispívání do diskuse musíš být přihlášen."}}
     {{/if}}
 </div>
