--- a/app/templates/admin/years.hbs
+++ b/app/templates/admin/years.hbs
@@ -14,6 +14,7 @@
         <th>Index</th>
         <th>Ročník</th>
         <th>Max. bodů</th>
+        <th>Bodová vycpávka</th>
         <th>#úloh</th>
         <th>Zapečetěn</th>
         <th>Akce</th>
@@ -26,6 +27,7 @@
             <td>{{year.index}}</td>
             <td>{{year.year}}</td>
             <td>{{year.sum_points}}</td>
+            <td>{{year.point_pad}}</td>
             <td>{{year.tasks_cnt}}</td>
             <td>{{year.sealed}}</td>
 
