--- a/app/templates/admin/year-create.hbs
+++ b/app/templates/admin/year-create.hbs
@@ -6,13 +6,19 @@
 
       <div class="form-group">
         <label>Index ročníku:</label>
-        {{input class="form-control" value=index}}
+        {{input type="number" min="1" max="1000" value=index class="form-control" required=true}}
       </div>
 
       <div class="form-group">
         <label>Ročník:</label>
-        {{input class="form-control" value=year}}
+        {{input class="form-control" value=year required=true}}
       </div>
+
+      <div class="form-group">
+        <label>Bodová vycpávka:</label>
+        {{input type="number" min="0" max="1000" value=pad class="form-control" required=true}}
+      </div>
+
 
       {{#if saving}}
         <button class="btn btn-primary inline disabled" id="save">Ukládám...</button>
