--- a/app/templates/admin/wave-create.hbs
+++ b/app/templates/admin/wave-create.hbs
@@ -25,7 +25,7 @@
 
       <div class="form-group">
         <label>Index v rámci ročníku:</label>
-        {{input class="form-control" value=index}}
+        {{input type="number" min="1" max="10" value=index class="form-control" required=true}}
       </div>
 
       {{#if saving}}
