--- a/app/templates/admin/wave-edit.hbs
+++ b/app/templates/admin/wave-edit.hbs
@@ -26,7 +26,7 @@
 
       <div class="form-group">
         <label>Index v rámci ročníku:</label>
-        {{input class="form-control" value=model.wave.index}}
+        {{input type="number" min="1" max="10" value=model.wave.index class="form-control" required=true}}
       </div>
 
       {{year-sealed model=session.year_obj}}
