--- a/app/templates/profile.hbs
+++ b/app/templates/profile.hbs
@@ -90,7 +90,7 @@
 
             {{#if model.successful}}
                 <p id="profile-points-text">
-                    Úspěšný řešitel:
+                    Skóre:
                 </p>
                 <div class="progress" style="margin-top:20px">
                     <div class="progress-bar progress-bar-warning progress-bar-ksi" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: {{model.successful}}%">
