--- a/app/templates/components/header-component.hbs
+++ b/app/templates/components/header-component.hbs
@@ -1,5 +1,5 @@
 <!-- header content -->
-<nav class="navbar navbar-trans navbar-fixed-top" role="navigation" style="z-index:150;  padding: 15px 0;" id=navbar>
+<nav class="navbar navbar-trans navbar-fixed-top" role="navigation" style="z-index:150;" id="navbar">
   <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-main">
