--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -1,47 +1,47 @@
-<section class="container content-section" style="margin-bottom:40px;">
+<section class="container content-section autojustify" style="margin-bottom:40px;">
     <h2 id="about">O KSI</h2>
-    <p align="justify">KSI, neboli Korespondenční seminář z&nbsp;informatiky, je celoroční soutěž pro studenty středních škol a&nbsp;víceletých gymnázií z&nbsp;České i&nbsp;Slovenské republiky organizovaná studenty Fakulty informatiky Masarykovy univerzity. Cílem semináře je seznámit řešitele se zajímavými oblastmi informatiky a&nbsp;procvičit programátorské, matematické a&nbsp;logické myšlení.
+    <p>KSI, neboli Korespondenční seminář z&nbsp;informatiky, je celoroční soutěž pro studenty středních škol a&nbsp;víceletých gymnázií z&nbsp;České i&nbsp;Slovenské republiky organizovaná studenty Fakulty informatiky Masarykovy univerzity. Cílem semináře je seznámit řešitele se zajímavými oblastmi informatiky a&nbsp;procvičit programátorské, matematické a&nbsp;logické myšlení.
     Seminář je uzpůsoben jak pro úplné začátečníky, kteří si na jednoduchých příkladech procvičí danou problematiku, tak pro zkušenější řešitele, kteří se pokusí pokořit hlavní soutěžní úlohy.
     </p>
 
 
     <h3>Jak seminář probíhá?</h3>
-    <p align="justify">
+    <p>
     Středobodem semináře je graf úloh, který se snažíš projít a&nbsp;po cestě vyřešit co nejvíce úloh zvládneš.
     Některé části grafu představují základní myšlenky, pojmy a&nbsp;postupy a&nbsp;obsahují jednoduché úlohy, jejichž správnost se vyhodnocuje okamžitě automaticky.
     Jiné obsahují hlavní soutěžní úlohy, na jejichž vyřešení a&nbsp;sepsání máš zhruba jeden měsíc.
     Po termínu odevzdání se úloha uzamkne, my tvoje řešení opravíme, přidělíme ti za něj body, poskytneme ti k němu zpětnou vazbu a&nbsp;zveřejníme vzorové řešení úlohy.
     Soutěžní úlohy jsou pak různého charakteru a&nbsp;zatímco nejjednodušší úlohy by po projití úvodních uzlů grafu měl zvládnout každý, nad tou nejtěžší se může zapotit i&nbsp;ostřílený řešitel programátorských soutěží.
     </p>
-    <p align="justify">
+    <p>
     S&nbsp;ostatními účastníky i&nbsp;organizátory semináře se můžeš potkat na několika výletech.
     Koncem školního roku pak vyhlásíme výsledky a&nbsp;nejlepší řešitele pozveme na <a href="http://kscuk.fi.muni.cz/">týdenní soustředění K-SCUK</a>.
     Úspěšní řešitelé semináře (ti, kteří dosáhnou alespoň 60&nbsp;% celkového počtu bodů) jsou zároveň přijati na Fakultu informatiky MU bez přijímacích zkoušek.
     </p>
 
     <h3>Jaké úlohy mám očekávat?</h3>
-    <p align="justify">
+    <p>
     Tvým úkolem ve většině úloh bude řešení algoritmického či programátorského problému.
     Někdy bude stačit popsat řešení jen obecně pomocí pseudokódu, jindy po tobě budeme chtít i&nbsp;program v&nbsp;Pythonu.
     Pokud programovat neumíš nebo programuješ v&nbsp;jiném jazyce, nemusíš se ničeho bát.
     Python tě pomocí cvičných příkladů rychle naučíme.
     Vždyť přece kolik jazyků umíš, tolikrát jsi člověkem. ;)
     </p>
-    <p align="justify">Některé z&nbsp;našich úloh mohou být složité nebo pracné, i&nbsp;když s&nbsp;dobrým nápadem se většinou dají vyřešit rychle a&nbsp;elegantně. Není třeba vyřešit všechny úlohy &ndash; pošli nám, co zvládneš, a&nbsp;zbytek si po uzavření úlohy můžeš přečíst ve vzorovém řešení. Také není nutné, abys měl(a) úlohu kompletně dořešenou. I&nbsp;pokud máš jen nějaké nápady co s&nbsp;ní, napiš nám je a&nbsp;my tvoji snahu určitě oceníme.</p>
+    <p>Některé z&nbsp;našich úloh mohou být složité nebo pracné, i&nbsp;když s&nbsp;dobrým nápadem se většinou dají vyřešit rychle a&nbsp;elegantně. Není třeba vyřešit všechny úlohy &ndash; pošli nám, co zvládneš, a&nbsp;zbytek si po uzavření úlohy můžeš přečíst ve vzorovém řešení. Také není nutné, abys měl(a) úlohu kompletně dořešenou. I&nbsp;pokud máš jen nějaké nápady co s&nbsp;ní, napiš nám je a&nbsp;my tvoji snahu určitě oceníme.</p>
 
     <h3>Proč se účastnit?</h3>
     <ul>
-    <li><p align="justify">Procvičíš si programátorské, matematické a&nbsp;logické myšlení a&nbsp;schopnost řešit nelehké problémy s&nbsp;využitím počítače. Získáš nové znalosti a&nbsp;naučíš se algoritmy běžně používané v&nbsp;každodenní programátorské praxi.</p></li>
+    <li><p>Procvičíš si programátorské, matematické a&nbsp;logické myšlení a&nbsp;schopnost řešit nelehké problémy s&nbsp;využitím počítače. Získáš nové znalosti a&nbsp;naučíš se algoritmy běžně používané v&nbsp;každodenní programátorské praxi.</p></li>
 
-    <li><p align="justify">Naučíš se své myšlenky jasně formulovat a&nbsp;srozumitelně vyjadřovat.</p></li>
+    <li><p>Naučíš se své myšlenky jasně formulovat a&nbsp;srozumitelně vyjadřovat.</p></li>
 
-    <li><p align="justify">Připravíš se na programátorské i&nbsp;jiné soutěže, např. na matematickou olympiádu kategorie&nbsp;P, ale také na budoucí přijímací zkoušky či pohovory. Trénink je základ úspěchu!</p></li>
+    <li><p>Připravíš se na programátorské i&nbsp;jiné soutěže, např. na matematickou olympiádu kategorie&nbsp;P, ale také na budoucí přijímací zkoušky či pohovory. Trénink je základ úspěchu!</p></li>
 
-    <li><p align="justify">Přiblíží se ti látka vyučovaná na vysokých školách. Dokážeš se lépe rozhodnout, co chceš studovat, a&nbsp;pokud se rozhodneš pro informatiku, získáš mírný náskok na své budoucí spolužáky.</p></li>
+    <li><p>Přiblíží se ti látka vyučovaná na vysokých školách. Dokážeš se lépe rozhodnout, co chceš studovat, a&nbsp;pokud se rozhodneš pro informatiku, získáš mírný náskok na své budoucí spolužáky.</p></li>
 
-        <li><p align="justify">Budeš-li patřit mezi úspěšné řešitele, můžeš se těšit na přijetí na Fakultu informatiky MU bez přijímacích zkoušek.</p></li>
+        <li><p>Budeš-li patřit mezi úspěšné řešitele, můžeš se těšit na přijetí na Fakultu informatiky MU bez přijímacích zkoušek.</p></li>
 
-    <li><p align="justify">A&nbsp;hlavně, když budeš svědomitě řešit, jistě tě nemine odměna v&nbsp;podobě <a href="http://kscuk.fi.muni.cz/">týdenního soustředění</a>.</p></li>
+    <li><p>A&nbsp;hlavně, když budeš svědomitě řešit, jistě tě nemine odměna v&nbsp;podobě <a href="http://kscuk.fi.muni.cz/">týdenního soustředění</a>.</p></li>
 
     </ul>
 
@@ -78,7 +78,7 @@
 
 
   <h2 id="calendar">Kalendář akcí KSI</h2>
-    <p align="justify">Významné akce KSI, jako Ksílety nebo termíny odevzdání úloh, zaznamenáváme do <a href="https://calendar.google.com/calendar/embed?src=07cn4qi2qm1g3rtpuls78dmsbg%40group.calendar.google.com" target="_blank">Google kalendáře KSI</a>. Tento kalendář si můžeš <a href="https://calendar.google.com/calendar/render?cid=07cn4qi2qm1g3rtpuls78dmsbg@group.calendar.google.com#main_7" target="_blank">importovat</a>.</p>
+    <p>Významné akce KSI, jako Ksílety nebo termíny odevzdání úloh, zaznamenáváme do <a href="https://calendar.google.com/calendar/embed?src=07cn4qi2qm1g3rtpuls78dmsbg%40group.calendar.google.com" target="_blank">Google kalendáře KSI</a>. Tento kalendář si můžeš <a href="https://calendar.google.com/calendar/render?cid=07cn4qi2qm1g3rtpuls78dmsbg@group.calendar.google.com#main_7" target="_blank">importovat</a>.</p>
 
     <hr>
     <p>Máš jinou otázku, na kterou ti zde chybí odpověď? Neváhej nám napsat na <a href="mailto:ksi@fi.muni.cz">ksi@fi.muni.cz</a>.</p>
