--- a/app/templates/achievements.hbs
+++ b/app/templates/achievements.hbs
@@ -1,4 +1,4 @@
-<section id="results" class="container content-section" style="text-align:justify">
+<section id="achievements" class="container content-section">
   <h2>Trofeje</h2>
     <hr>
   <div class="row" style="margin-bottom:10px" align="center">
