--- a/app/templates/admin/achievement-create.hbs
+++ b/app/templates/admin/achievement-create.hbs
@@ -1,4 +1,4 @@
-<section id="admin-achievement-create" class="container content-section" style="text-align:justify">
+<section id="admin-achievement-create" class="container content-section">
   <h2>Nová trofej</h2>
 
   {{year-sealed model=session.year_obj}}
