--- a/app/templates/admin/achievement-edit.hbs
+++ b/app/templates/admin/achievement-edit.hbs
@@ -1,4 +1,4 @@
-<section id="admin-achievement-edit" class="container content-section" style="text-align:justify">
+<section id="admin-achievement-edit" class="container content-section">
   <h2>Úprava trofeje</h2>
 
   {{year-sealed model=model.achievement.year}}
