--- a/app/templates/admin/achievement-grant.hbs
+++ b/app/templates/admin/achievement-grant.hbs
@@ -1,4 +1,4 @@
-<section id="admin-achievement-grant" class="container content-section" style="text-align:justify">
+<section id="admin-achievement-grant" class="container content-section">
   <h2>Udělit trofej</h2>
 
   {{#link-to "admin/users"}}Zpět na přehled uživatelů{{/link-to}}<br>
