--- a/app/templates/admin/achievements.hbs
+++ b/app/templates/admin/achievements.hbs
@@ -1,4 +1,4 @@
-<section id="admin-achievement" class="container content-section" style="text-align:justify">
+<section id="admin-achievement" class="container content-section">
   <h2>Správa trofejí</h2>
   {{#link-to "admin/achievement-create" class="btn btn-primary inline"}}Nová trofej{{/link-to}}
 
