--- a/app/templates/admin/articles.hbs
+++ b/app/templates/admin/articles.hbs
@@ -1,4 +1,4 @@
-<section id="admin-articles" class="container content-section" style="text-align:justify">
+<section id="admin-articles" class="container content-section">
   <h2>Správa článků</h2>
 
   {{year-sealed model=session.year_obj}}
