--- a/app/templates/admin/export.hbs
+++ b/app/templates/admin/export.hbs
@@ -1,8 +1,8 @@
-<section id="admin-export" class="container content-section" style="text-align:justify">
+<section id="admin-export" class="container content-section">
   <h2>Export dat ze systému</h2>
   <div class="panel panel-ksi">
-	  <div class="panel-heading panel-heading-ksi"><h3>Obálky</h3></div>
-	  <div class="panel-body">
+      <div class="panel-heading panel-heading-ksi"><h3>Obálky</h3></div>
+      <div class="panel-body">
       <div class="form-group">
         <label>Ročník:</label>
         <select>
@@ -29,16 +29,16 @@
         <button class="btn btn-primary inline" id="export-pdf">Export do PDF</button> <!-- TODO button -->
         <button class="btn btn-primary inline" id="export-pdf">Export do LaTeXu</button> <!-- TODO button -->
       </div>
-	  </div>
-	</div>
+      </div>
+    </div>
 
   <div class="panel panel-ksi">
-	  <div class="panel-heading panel-heading-ksi"><h3>Výpis řešitelů</h3></div>
-	  <div class="panel-body">
+      <div class="panel-heading panel-heading-ksi"><h3>Výpis řešitelů</h3></div>
+      <div class="panel-body">
 
       <div class="panel panel-default">
-    	  <div class="panel-heading">Zvolit omezení</div>
-    	  <div class="panel-body">
+          <div class="panel-heading">Zvolit omezení</div>
+          <div class="panel-body">
           <div class="form-group">
             <label>Řešitel ročníku:</label>
             <select>
@@ -61,7 +61,7 @@
           </div>
           <button class="btn btn-primary inline" style="width: 250px; margin-left:0px">OK</button> <!-- TODO button -->
         </div>
-    	</div>
+        </div>
 
       <table class="table table-striped">
         <thead>
@@ -69,7 +69,7 @@
             <th>Jméno</th>
             <th>E-mail</th>
             <th>Bydlište</th>
-    				<th>Škola</th>
+                    <th>Škola</th>
           </tr>
         </thead>
         <tbody>
@@ -77,11 +77,11 @@
             <td>Juraj Karlubík</td> <!-- meno -->
             <td>karlubik.juraj@gmail.com</td> <!-- email -->
             <td>Novozámocká 252, Nitra, 94905, SR</td> <!-- bydliste -->
-    				<td>Gymnázium Golianova 68, Nitra, 94911, SR</td> <!-- skola -->
+                    <td>Gymnázium Golianova 68, Nitra, 94911, SR</td> <!-- skola -->
           </tr>
         </tbody>
       </table>
 
     </div>
-	</div>
+    </div>
 </section>
