--- a/app/templates/admin/forum.hbs
+++ b/app/templates/admin/forum.hbs
@@ -1,4 +1,4 @@
-<section class="container content-section" style="text-align:justify">
+<section class="container content-section">
     <h2>Diskuse k úlohám</h2>
 
     <label>Filtrovat vlákna podle vlny</label>
