--- a/app/templates/admin/schools.hbs
+++ b/app/templates/admin/schools.hbs
@@ -1,4 +1,4 @@
-<section id="admin-schools" class="container content-section" style="text-align:justify">
+<section id="admin-schools" class="container content-section">
   <h2>Správa škol</h2>
   <table class="table table-striped">
     <thead>
