--- a/app/templates/admin/task-create.hbs
+++ b/app/templates/admin/task-create.hbs
@@ -1,4 +1,4 @@
-<section id="admin-task-create" class="container content-section" style="text-align:justify">
+<section id="admin-task-create" class="container content-section">
   <h2>Nová úloha</h2>
   <h4>{{model.wave.caption}}</h4>
   {{#link-to "admin/tasks"}}Zpět na přehled{{/link-to}}
