--- a/app/templates/admin/task-edit.hbs
+++ b/app/templates/admin/task-edit.hbs
@@ -1,4 +1,4 @@
-<section id="admin-task-edit" class="container content-section" style="text-align:justify">
+<section id="admin-task-edit" class="container content-section">
   <h2>Úprava úlohy</h2>
   {{#link-to "admin/tasks"}}Zpět na přehled{{/link-to}}
   <div class="alert alert-danger" style="margin-top:20px">Parametry níže upravujte jen pokud víte, co děláte.</div>
