--- a/app/templates/admin/user-edit.hbs
+++ b/app/templates/admin/user-edit.hbs
@@ -1,4 +1,4 @@
-<section id="admin-user-edit" class="container content-section" style="text-align:justify">
+<section id="admin-user-edit" class="container content-section">
   <h2>Úprava uživatele Jmeno</h2>
   {{#link-to "admin/users"}}zpět na přehled{{/link-to}}
   <div class="alert alert-info" role="alert" style="margin-top:20px">
