--- a/app/templates/admin/users.hbs
+++ b/app/templates/admin/users.hbs
@@ -1,4 +1,4 @@
-<section id="admin-users" class="container content-section" style="text-align:justify">
+<section id="admin-users" class="container content-section">
   <h2>Správa uživatelů</h2>
 
     <label>Zobrazit uživatele:</label>
