--- a/app/templates/admin/vlna-edit.hbs
+++ b/app/templates/admin/vlna-edit.hbs
@@ -1,4 +1,4 @@
-<section id="admin-vlna-edit" class="container content-section" style="text-align:justify">
+<section id="admin-vlna-edit" class="container content-section">
   <h2>Úprava vlny 1</h2> <!-- index vlny -->
   {{#link-to "admin/vlny"}}zpět na přehled{{/link-to}}
   <div class="panel panel-ksi" style="margin-top:20px">
