--- a/app/templates/admin/wave-edit.hbs
+++ b/app/templates/admin/wave-edit.hbs
@@ -1,4 +1,4 @@
-<section id="admin-task-edit" class="container content-section" style="text-align:justify">
+<section id="admin-wave-edit" class="container content-section">
   <h2>Úprava vlny</h2>
   {{#link-to "admin/waves"}}Zpět na přehled{{/link-to}}
   <div class="panel panel-ksi" style="margin-top:20px">
