--- a/app/templates/admin/waves.hbs
+++ b/app/templates/admin/waves.hbs
@@ -1,4 +1,4 @@
-<section id="admin-vlny" class="container content-section" style="text-align:justify">
+<section id="admin-vlny" class="container content-section">
   <h2>Správa vln</h2>
 
   {{year-sealed model=session.year_obj}}
