--- a/app/templates/admin/year-edit.hbs
+++ b/app/templates/admin/year-edit.hbs
@@ -1,4 +1,4 @@
-<section id="admin-task-edit" class="container content-section" style="text-align:justify">
+<section id="admin-year-edit" class="container content-section">
   <h2>Úprava ročníku</h2>
   {{#link-to "admin/years"}}Zpět na přehled{{/link-to}}
   <div class="panel panel-ksi" style="margin-top:20px">
