--- a/app/templates/admin/years.hbs
+++ b/app/templates/admin/years.hbs
@@ -1,4 +1,4 @@
-<section id="admin-yeras" class="container content-section" style="text-align:justify">
+<section id="admin-years" class="container content-section">
   <h2>Správa ročníků</h2>
 
   {{#if session.current_user.admin}}
