--- a/app/templates/articles.hbs
+++ b/app/templates/articles.hbs
@@ -1,4 +1,4 @@
-<section id="novinky" class="container content-section" style="text-align:justify">
+<section id="novinky" class="container content-section autojustify">
     {{articles-list model=model}}
     <ul class="pager">
       {{#pagination-button class="btn btn-primary btn-pager" action='previousPage' enabled=hasPreviousPage }}Přechozí{{/pagination-button}}
