--- a/app/templates/bad-url.hbs
+++ b/app/templates/bad-url.hbs
@@ -1,4 +1,4 @@
-<section id="err404" class="container content-section" style="text-align:justify">
+<section id="err404" class="container content-section">
     <!-- Sekcia noviniek -->
     <div class="jumbotron" style="background-color: transparent">
         <h1>Ano, mohli jsme pro vás připravit hezkou 404 stránku, ale my jsme řekli "NE!"</h1>
