--- a/app/templates/error.hbs
+++ b/app/templates/error.hbs
@@ -1,4 +1,4 @@
-<section class="container content-section" style="text-align:justify; margin-top: 40px;height:500px;">
+<section class="container content-section" style="margin-top: 40px;height:500px;">
     {{#if model.errors}}
         {{#each model.errors as |e|}}
             <h1>{{e.status}} {{e.title}}</h1>
