--- a/app/templates/forum.hbs
+++ b/app/templates/forum.hbs
@@ -1,4 +1,4 @@
-<section class="container content-section" style="text-align:justify">
+<section class="container content-section autojustify">
     <!-- Sekcia -->
     <div style="margin:40px;">
         <h2>Obecná diskuse</h2>
