--- a/app/templates/profile.hbs
+++ b/app/templates/profile.hbs
@@ -1,5 +1,5 @@
 {{log model}}
-<section id="profile" class="container content-section" style="text-align:justify">
+<section id="profile" class="container content-section">
     <div class="row">
         <div class="col-sm-12 col-md-3">
             <div style="margin-top:30px">
