--- a/app/templates/registration.hbs
+++ b/app/templates/registration.hbs
@@ -1,4 +1,4 @@
-<section id="registration" class="container content-section" style="text-align:justify">
+<section id="registration" class="container content-section">
     {{#if registration_done}}
     {{info-general text="Registrace byla provedna. Nyní se můžeš přihlásit."}}
   {{else}}
