--- a/app/templates/results.hbs
+++ b/app/templates/results.hbs
@@ -1,4 +1,4 @@
-<section id="results" class="container content-section" style="text-align:justify">
+<section id="results" class="container content-section">
   <h2>Výsledky</h2>
   <h3>Středoškoláci</h3>
   {{results-list model=results_hs}}
