--- a/app/templates/settings.hbs
+++ b/app/templates/settings.hbs
@@ -1,4 +1,4 @@
-<section id="profile" class="container content-section" style="text-align:justify">
+<section id="profile" class="container content-section">
     <div class="row flex-row-md stickycolumn-parent">
       <div class="col-sm-12 col-md-3">
         <div class="stickycolumn-parent" style="margin-top:30px">
