--- a/app/templates/task.hbs
+++ b/app/templates/task.hbs
@@ -1,5 +1,5 @@
 {{#if model.active}}
-    <section class="container content-section" style="text-align:justify">
+    <section class="container content-section">
         <div class="row" style="margin-top: 30px; margin-left: 20px">
             <h2 id="name" style="color: black">{{{model.title}}}</h2>
         </div>
@@ -42,7 +42,7 @@
                 </div><!-- /.container-fluid -->
             </nav>
         </div>
-        <section>
+        <section class="autojustify">
             {{outlet}}
         </section>
     </section>
