--- a/app/templates/tasks.hbs
+++ b/app/templates/tasks.hbs
@@ -2,7 +2,7 @@
     {{warning-login text="nejsi přihlášen. Aby byly tvé operace uloženy, musíš se přihlásit."}}
 {{/unless}}
 
-<section id="graph" class="container content-section" style="text-align:justify">
+<section id="graph" class="container content-section">
         <div class="row flex-row-md stickycolumn-parent">
             <!-- graf -->
             <div class="col-sm-12 col-md-11 col-md-push-2">
