--- a/app/templates/thread.hbs
+++ b/app/templates/thread.hbs
@@ -1,4 +1,4 @@
-<section id="thread" class="container content-section" style="text-align:justify">
+<section id="thread" class="container content-section autojustify">
     {{#unless session.isAuthenticated}}
           {{warning-login text="Pro přispívání do diskuse musíš být přihlášen."}}
     {{/unless}}
