--- a/app/styles/base/html.scss
+++ b/app/styles/base/html.scss
@@ -3,3 +3,12 @@ html,body {
   height: 100%;
   font-family: Arial, Helvetica, sans-serif;
 }
+
+@media (max-width: 499px) {
+    .autojustify { text-align: left }
+}
+
+@media (min-width: 500px) {
+    .autojustify { text-align: justify }
+}
+
