--- a/app/templates/admin/article-create.hbs
+++ b/app/templates/admin/article-create.hbs
@@ -1,4 +1,4 @@
-<section id="admin-article-create" class="container content-section" style="text-align:justify">
+<section id="admin-article-create" class="container content-section">
   <h2>Nový článek</h2>
   {{#link-to "admin/articles"}}zpět na přehled{{/link-to}}
   <div class="panel panel-ksi" style="margin-top:20px">
