--- a/app/templates/admin/correcting.hbs
+++ b/app/templates/admin/correcting.hbs
@@ -1,4 +1,4 @@
-<section id="admin-correcting" class="container content-section" style="text-align:justify">
+<section id="admin-correcting" class="container content-section">
   <h2>Opravování</h2>
 
   {{year-sealed model=session.year_obj}}
