--- a/app/templates/admin/e-mail.hbs
+++ b/app/templates/admin/e-mail.hbs
@@ -1,4 +1,4 @@
-<section id="admin-email" class="container content-section" style="text-align:justify">
+<section id="admin-email" class="container content-section">
   <h2>E-mail</h2>
   <div class="form-group">
     <label>Od:</label>
