--- a/app/templates/admin/school-edit.hbs
+++ b/app/templates/admin/school-edit.hbs
@@ -1,4 +1,4 @@
-<section id="admin-school-edit" class="container content-section" style="text-align:justify">
+<section id="admin-school-edit" class="container content-section">
   <h2>Úprava školy</h2>
   {{#link-to "admin/schools"}}zpět na přehled{{/link-to}}
   <div class="panel panel-ksi" style="margin-top:20px">
