--- a/app/templates/admin/tasks.hbs
+++ b/app/templates/admin/tasks.hbs
@@ -1,4 +1,4 @@
-<section id="admin-tasks" class="container content-section" style="text-align:justify">
+<section id="admin-tasks" class="container content-section">
   <h2>Správa úloh</h2>
 
   {{year-sealed model=session.year_obj}}
