--- a/app/templates/admin/wave-create.hbs
+++ b/app/templates/admin/wave-create.hbs
@@ -1,4 +1,4 @@
-<section id="admin-task-edit" class="container content-section" style="text-align:justify">
+<section id="admin-wave-create" class="container content-section">
   <h2>Nová vlna</h2>
   {{#link-to "admin/waves"}}Zpět na přehled{{/link-to}}
   <div class="panel panel-ksi" style="margin-top:20px">
