--- a/app/templates/article.hbs
+++ b/app/templates/article.hbs
@@ -1,4 +1,4 @@
-<section id="novinky" class="container content-section" style="text-align:justify">
+<section id="novinky" class="container content-section">
     <div class="panel panel-article" style="margin-top:20px">
       <div class="panel-heading panel-heading-article">
         <h1 id="name">
@@ -6,7 +6,7 @@
           {{{model.title}}}
         </h1>
       </div>
-      <div class="panel-body panel-body-article">
+      <div class="panel-body panel-body-article autojustify">
         <div class="row" style="margin-top: 10px">
             {{date-and-time model.time_published 'cs'}}
             {{{model.body}}}
