--- a/app/templates/login.hbs
+++ b/app/templates/login.hbs
@@ -1,4 +1,4 @@
-<section class="container content-section" style="text-align:justify; margin-top: 40px;height:500px;">
+<section class="container content-section" style="margin-top: 40px;height:500px;">
     <h3>Je třeba se přihlásit</h3>
     <script>
         $("#login_button").click();
