--- a/app/templates/components/thread-post.hbs
+++ b/app/templates/components/thread-post.hbs
@@ -1,4 +1,4 @@
-<li class="media" style="margin-top: 15px"> <!-- pociatok prispevku -->
+<li class="media media-thread {{if model.is_new 'new-post'}}"> <!-- pociatok prispevku -->
     <div class="media-left" >
         {{#link-to "user-profile" model.author}}
           <img class="media-object" src="{{model.author.profile_picture_r}}" style="width:50px; border-radius: 5px;">
@@ -51,7 +51,7 @@
           {{#if content_error}}
             {{warning-general text=content_error}}
           {{/if}}
-          <div class="panel panel-default" style="border:none; box-shadow: none;">
+          <div class="panel panel-default" style="border:none; box-shadow: none; background-color: inherit;">
               <div class="controls form-inline" style="margin-top:20px">
                   <label for="threadName">Příspěvek:</label>
                   {{text-editor value=response_text}}
