Fix bs-datetimepicker style and locale.
Close #205.

--- a/app/styles/layout/navbar-main.scss
+++ b/app/styles/layout/navbar-main.scss
@@ -55,11 +55,11 @@
   background-color: ksi-color('text-light');
 }
 
-.dropdown-menu {
+.navbar .dropdown-menu {
   background-color: ksi-color('primary-dark');
 }
 
-.dropdown-menu > li > a {
+.navbar .dropdown-menu > li > a {
   color: ksi-color('text-light');
 }
 
