--- a/app/templates/admin/article-edit.hbs
+++ b/app/templates/admin/article-edit.hbs
@@ -14,7 +14,7 @@
 
       <div class="form-group">
         <label>Termín publikace:</label>
-        {{bs-datetimepicker date=model.time_published format='DD.MM.YYYY HH:mm' updateDate=(action (mut model.time_published)) forceDateOutput=true}}
+        {{bs-datetimepicker date=model.time_published updateDate=(action (mut model.time_published)) forceDateOutput=true locale='cs'}}
       </div>
 
       <div class="form-group">
